--- a/public/src/style/style.css
+++ b/public/src/style/style.css
@@ -353,6 +353,51 @@ section {
   transform: scale(1.2);
 }
 
+/* Contact */
+form {
+  display: flex;
+  flex-direction: column;
+  row-gap: 15px;
+}
+
+.form--head {
+  display: flex;
+  align-items: center;
+  column-gap: 15px;
+}
+
+.form--input {
+  width: 100%;
+  font-weight: bold;
+  font-size: 1.1rem;
+  font-family: "Segoe UI", "Courier New", Courier, monospace;
+  color: var(--light-blue);
+  padding: 15px;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+}
+
+.form--btn {
+  color: var(--dark-blue);
+  padding: 15px;
+  font-weight: bold;
+  font-size: 1rem;
+  border: none;
+  border-radius: 5px;
+  transition: 0.3s ease;
+}
+
+.form--btn.disable {
+  cursor: not-allowed;
+  background-color: #ec589169;
+}
+
+.form--btn.enable {
+  cursor: pointer;
+  background-color: var(--pink);
+}
+
 /* Mail Bottom Right */
 .email {
   position: fixed;
