--- a/public/src/style/style.css
+++ b/public/src/style/style.css
@@ -20,7 +20,7 @@
   --dark-blue: #081229;
   --light-blue: #181d3b;
   --pink: #ec5891;
-  --gray: rgb(182, 182, 182);
+  --gray: #b6b6b6;
 }
 
 html {
@@ -43,9 +43,10 @@ header {
 }
 
 .logo {
-  color: white;
+  /* color: white;
   font-weight: bold;
-  font-size: 2rem;
+  font-size: 2rem; */
+  width: 80px;
 }
 
 .nav {
@@ -234,65 +235,6 @@ section {
   border-radius: 5px;
 }
 
-/* Social Media Bottom Left*/
-.social {
-  position: fixed;
-  bottom: 0;
-  left: 40px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  row-gap: 25px;
-}
-
-.social > a {
-  position: relative;
-}
-
-.social i {
-  color: white;
-  font-size: 2rem;
-  cursor: pointer;
-  transition: 0.3s ease;
-}
-
-.pulse {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-
-  z-index: -10;
-}
-
-.social > a:hover .pulse {
-  transform-origin: bottom right;
-  background-color: var(--pink);
-  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) 1 forwards;
-}
-
-.social > a:hover i {
-  transform: scale(1.3);
-}
-
-.contact--line {
-  width: 1px;
-  height: 100px;
-  background-color: white;
-}
-
-@keyframes ping {
-  75%,
-  100% {
-    transform: scale(2);
-    opacity: 0;
-  }
-}
-
 /* Projets */
 .swiper {
   width: 100%;
@@ -398,11 +340,148 @@ form {
   background-color: var(--pink);
 }
 
+/* Footer */
+footer {
+  width: 100%;
+  background-color: var(--light-blue);
+}
+
+.footer--container {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer--legal {
+  color: white;
+  position: relative;
+}
+
+.footer--legal::after {
+  position: absolute;
+  content: "";
+  width: 0;
+  height: 2px;
+  left: 0;
+  top: 30px;
+  background-color: var(--pink);
+  transition: 0.2s ease;
+}
+
+.footer--legal:hover::after {
+  width: 100%;
+}
+
+.footer--links {
+  display: flex;
+  align-items: center;
+  column-gap: 20px;
+}
+
+.footer--links > a {
+  font-size: 1.5rem;
+  color: white;
+  cursor: pointer;
+  transition: 0.2s ease;
+}
+
+.footer--links > a:hover {
+  color: var(--pink);
+}
+
+/* Mentions Légales */
+.legalContainer {
+  padding: 40px;
+  height: fit-content;
+}
+
+.legalContent {
+  max-width: 1000px;
+  margin: 50px auto;
+}
+
+.legal--title {
+  color: white;
+  text-align: center;
+}
+
+.legal--subtitle {
+  color: white;
+  margin: 30px 0 10px 0;
+}
+
+.legal--para {
+  color: var(--gray);
+  margin-bottom: 10px;
+}
+
+/* Social Media Bottom Left*/
+.social {
+  position: fixed;
+  bottom: 0;
+  left: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 25px;
+}
+
+.social > a {
+  position: relative;
+}
+
+.social i {
+  color: white;
+  font-size: 2rem;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+.pulse {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  z-index: -10;
+}
+
+.social > a:hover .pulse {
+  transform-origin: bottom right;
+  background-color: var(--pink);
+  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) 1 forwards;
+}
+
+.social > a:hover i {
+  transform: scale(1.3);
+}
+
+.contact--line {
+  width: 1px;
+  height: 100px;
+  background-color: white;
+}
+
+@keyframes ping {
+  75%,
+  100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+
 /* Mail Bottom Right */
 .email {
   position: fixed;
   bottom: 0;
   right: 40px;
+  width: 32px;
   display: flex;
   flex-direction: column;
   justify-content: center;
