--- a/public/src/style/style.css
+++ b/public/src/style/style.css
@@ -15,11 +15,23 @@
   --light-blue: #181d3b;
   --pink: #ec5891;
   --gray: #b6b6b6;
+  font-size: 16px;
+}
+
+@media screen and (max-width: 768px) {
+  :root {
+    font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  :root {
+    font-size: 10px;
+  }
 }
 
 html {
   font-family: "Roboto", sans-serif;
-  font-size: 16px;
   background-color: var(--dark-blue);
 }
 
@@ -37,12 +49,19 @@ header {
 
 .logo {
   width: 80px;
+  border: 2px solid var(--pink);
+  border-bottom: none;
+  border-right: none;
 }
 
 .nav {
   display: flex;
   align-items: center;
   column-gap: 35px;
+}
+
+#crossIcon {
+  display: none;
 }
 
 .nav--item {
@@ -74,9 +93,21 @@ header {
   display: none;
 }
 
+.nav--links {
+  display: none;
+}
+
 @media screen and (max-width: 768px) {
   .logo {
     width: 70px;
+  }
+
+  #crossIcon {
+    display: none;
+  }
+
+  .nav--links {
+    display: none;
   }
 }
 
@@ -85,8 +116,39 @@ header {
     width: 60px;
   }
 
+  nav {
+    position: absolute;
+    top: 0;
+    left: 100%;
+    width: 70%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: 0.3s ease;
+    background-color: var(--light-blue);
+  }
+
+  nav.enable {
+    left: 30%;
+  }
+
   .nav {
-    display: none;
+    margin-top: auto;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    row-gap: 40px;
+  }
+
+  #crossIcon {
+    display: block;
+    position: absolute;
+    top: 40px;
+    right: 20px;
+    color: white;
+    font-size: 1.8rem;
   }
 
   #hamburgerMenu {
@@ -94,14 +156,46 @@ header {
     color: white;
     font-size: 1.3rem;
   }
+
+  .nav--item {
+    font-size: 1.8rem;
+  }
+
+  .nav--links {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    column-gap: 20px;
+    padding: 15px;
+    margin-top: auto;
+  }
+
+  .nav--links > a {
+    font-size: 1.8rem;
+    color: white;
+    cursor: pointer;
+    transition: 0.2s ease;
+  }
+}
+
+@keyframes closeMenuAnimation {
+  0% {
+    left: 100%;
+  }
+
+  90% {
+    left: 27%;
+  }
+
+  100% {
+    left: 30%;
+  }
 }
 
 /* Main */
 main {
   height: 100vh;
-  /* overflow-x: hidden;
-  overflow-y: scroll;
-  scroll-snap-type: y mandatory; */
 }
 
 /* Sections */
@@ -109,7 +203,6 @@ section {
   width: 100%;
   height: 100vh;
   padding: 0 30px;
-  /* scroll-snap-align: center; */
 }
 
 @media screen and (max-width: 768px) {
@@ -146,28 +239,20 @@ section {
   color: #ec5891;
   font-family: "Abril Fatface", cursive;
   letter-spacing: 5px;
-  /* opacity: 0; */
-  /* animation: firstLoadTransition 1.5s 0.5s forwards; */
 }
 
 .presentation--name {
   font-size: 4rem;
   font-weight: bold;
   color: white;
-  /* opacity: 0; */
-  /* animation: firstLoadTransition 1.5s 0.5s forwards; */
 }
 
 .presentation--info {
   font-size: 2rem;
   color: var(--gray);
-  /* opacity: 0; */
-  /* animation: firstLoadTransition 1.5s 0.5s forwards; */
 }
 
 #btn--contact {
-  /* opacity: 0; */
-  /* animation: firstLoadTransition 1.5s 0.5s forwards; */
 }
 
 .btn--cta {
@@ -192,20 +277,12 @@ section {
 }
 
 @media screen and (max-width: 768px) {
-  :root {
-    font-size: 12px;
-  }
-
   .btn--cta {
     padding: 12px 20px;
   }
 }
 
 @media screen and (max-width: 640px) {
-  :root {
-    font-size: 10px;
-  }
-
   .btn--cta.sm {
     display: block;
   }
@@ -219,8 +296,6 @@ section {
 .section--title {
   color: white;
   font-size: 2.3rem;
-  /* opacity: 0; */
-  /* animation: firstLoadTransition 1.5s 0.5s forwards; */
 }
 
 .section--title > span {
@@ -396,7 +471,6 @@ form {
   width: 100%;
   font-weight: bold;
   font-size: 1.1rem;
-  font-family: "Segoe UI", "Courier New", Courier, monospace;
   color: var(--light-blue);
   padding: 15px;
   border-radius: 5px;
@@ -563,43 +637,10 @@ footer {
   color: var(--pink);
 }
 
-/* .social > a {
-  position: relative;
-} */
-
-/* .pulse {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  z-index: -10;
-} */
-
-/* .social > a:hover .pulse {
-  transform-origin: bottom right;
-  background-color: var(--pink);
-  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) 1 forwards;
-} */
-
-/* .social > a:hover i {
-  transform: scale(1.3);
-} */
-
 .contact--line {
   width: 1px;
   height: 100px;
   background-color: white;
-}
-
-@keyframes ping {
-  75%,
-  100% {
-    transform: scale(2);
-    opacity: 0;
-  }
 }
 
 @media screen and (max-width: 768px) {
